--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <link rel="stylesheet" href="styles/normalize.css" media="screen" charset="utf-8">
       <link rel="stylesheet" href="styles/html5bp.css" media="screen" charset="utf-8">
       <link rel="stylesheet" href="styles/style.css" media="screen" charset="utf-8">
-      <meta name="description" content="">
+      <meta name="description" content="Find fun things to do in the city.">
       <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
 
@@ -25,8 +25,9 @@
                 <li class="dropdown-button" id="initial-value"><a href="#">Things to do: <span>Select One</span></a>
                   <ul class="dropdown-menu">
                       <li id="eat"><a href="#">Eat Pizza</a></li>
-                      <li id="swim"><a href="#">Swim</a></li>
-                      <li id="theatre"><a href="#">Theatre</a></li>
+                      <li id="music"><a href="#">Live Music</a></li>
+                      <li id="climb"><a href="#">Rock Climb</a></li>
+                      <li id="play"><a href="#">See a Play</a></li>
                   </ul>
                 </li>
               </ul>
@@ -34,37 +35,26 @@
             <div class="clearfix"></div>
           </section>
         </header>
-        <div id="popUp" class="loader hidden">
-          <a href="#" class="closePopUp">X</a>
-          <div class="container">
-            <h1>Article title here</h1>
-            <p>
-              Article description/content here.
-            </p>
-            <a href="#" class="popUpAction" target="_blank">Read more from source</a>
-          </div>
-        </div>
         <section id="main" class="container">
-          <p id="click">Click</p>
         </section>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
-        <script src="js/app.js"></script>
-        <!--<script id="article-template" type="text/x-handlebars-template">
+        <script src="js/handlebars-v4.0.5.js"></script>
+        <script id="activities-template" type="text/x-handlebars-template">
           <article class="article">
             <section class="featuredImage">
               <img src="{{image}}" alt="" />
             </section>
             <section class="articleContent">
                 <a class="story-link" href="{{link}}"><h3 class="title">{{title}}</h3></a>
-                <p class="content">{{description}}</p>
-                <h6>{{tag}}</h6>
+                <p class="address">{{address}} | Phone: <span class="phone">{{phone}}</span></p>
             </section>
             <section class="impressions">
-              {{impressions}}
+              Rating: {{rating}}
             </section>
             <div class="clearfix"></div>
           </article>
-        </script>-->
+        </script>
+        <script src="js/app.js"></script>
     </body>
 </html>
