Add alert if location input isn't filled

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <form>
                 <input type="text" id="location" name="location" placeholder="Where are you?">
                 <select id="things-to-do">
-                  <option selected="selected" id="what">What are you doing?</option>
+                  <option selected="selected" id="what">What to do?</option>
                   <option id="pizza" value="pizza">Eat Pizza</option>
                   <option id="climb" value="rock climb">Rock Climb</option>
                   <option id="play" value="theatre">See a Play</option>
