--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
             <div class="clearfix"></div>
           </article>
         </script>
+        <!-- Parse CDN -->
+        <!--<script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
+        <script src="js/client.js"></script> -->
         <script src="js/app.js"></script>
     </body>
 </html>
