--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
                 <a class="story-link" href="{{link}}" target="_blank"><h3 class="title">{{title}}</h3></a>
                 <p class="address">{{address}} | Phone: <span class="phone">{{phone}}</span></p>
                 <a href="#" class="comment">Comment</a>
-                <form action="" class="hidden" id="message-form">
+                <form action="" class="hidden message-form">
                   <div class="form-group">
                     <label>Message:</label>
                     <textarea id="message" type="text" class="form-control"></textarea>
                   </div>
-                  <button class="btn btn-default">Post to board</button>
+                  <button class="btn btn-default">Add Comment</button>
                 </form>
             </section>
             <section class="impressions">
