Trying to get CRUD to work

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="comment-list"><ul></ul></div>
                 <form action="" class="hidden message-form">
                   <div class="form-group">
-                    <label>Message:</label>
+                    <input type="hidden" value="{{id}}" name="yelp-id"><label>Message:</label>
                     <textarea type="text" class="message form-control"></textarea>
                   </div>
                   <button class="btn btn-default">Add Comment</button>
