Change heading text on selection

--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
             <nav>
               <form class="form-inline">
                 <fieldset class="form-group">
-                  <input type="text" id="location" class="form-control form-control-lg" name="location" placeholder="Where are you?">
+                  <input type="text" id="location" class="form-control form-control-lg" name="location" placeholder="Where are you even?">
                   <select id="things-to-do" class="form-control form-control-lg">
-                    <option selected="selected" id="what">What to do?</option>
+                    <option selected="selected" id="what">What are you even going to do?</option>
+                    <option id="dance" value="dance">Dance the Night Away</option>
                     <option id="pizza" value="pizza">Eat Pizza</option>
+                    <option id="karaoke" value="karaoke">Pretend you know how to Sing</option>
                     <option id="climb" value="rock climb">Rock Climb</option>
                     <option id="play" value="theatre">See a Play</option>
                     <option id="music" value="concert">See Live Music</option>
@@ -38,7 +40,9 @@
             <div class="clearfix"></div>
           </section>
         </header>
+        <div id="landing-page-container">
         <h3 class="landing-page">Find Stuff To Do in the City</h3>
+        </div>
         <section id="main" class="container">
         </section>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
