Update js comments and minor html edits

--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
                     <option selected="selected" id="what">What are you even going to do?</option>
                     <option id="dance" value="dance">Dance the Night Away</option>
                     <option id="pizza" value="pizza">Eat Pizza</option>
+                    <option id="play" value="theatre">Get Cultured at the Theatre</option>
+                    <option id="comedy" value="comedy">Laugh at a Comedy Show</option>
                     <option id="karaoke" value="karaoke">Pretend you know how to Sing</option>
                     <option id="climb" value="rock climb">Rock Climb</option>
-                    <option id="play" value="theatre">See a Play</option>
                     <option id="music" value="concert">See Live Music</option>
                   </select>
                 </fieldset>
