--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
         <script src="js/handlebars-v4.0.5.js"></script>
         <script id="activities-template" type="text/x-handlebars-template">
           <article class="activity">
-            <section class="featuredImage">
+            <section class="featured-image">
               <img src="{{image}}" alt="" />
             </section>
-            <section class="activityContent">
+            <section class="activity-content">
                 <a class="story-link" href="{{link}}" target="_blank"><h3 class="title">{{title}}</h3></a>
                 <p class="address">{{address}} | <span class="phone">{{phone}}</span></p>
                 <a href="#" class="comment">Comment</a>
