Disable selecting placeholder text

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <fieldset class="form-group">
                   <input type="text" id="location" class="form-control form-control-lg" name="location" placeholder="Where are you even?">
                   <select id="things-to-do" class="form-control form-control-lg">
-                    <option selected="selected" id="what">What are you even going to do?</option>
+                    <option selected="selected" id="what" disabled>What are you even going to do?</option>
                     <option id="dance" value="dance">Dance the Night Away</option>
                     <option id="pizza" value="pizza">Eat Pizza</option>
                     <option id="play" value="theatre">Get Cultured at the Theatre</option>
